# fxvol

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/bloomberg/: README.md  RESULTS.md  detailed_volatility_smile.csv  detailed_volatility_smile.xlsx  rates_20250305.csv  volatility_surface.csv  volatility_surface.xlsx
presentation/: fxvol_report.html
scripts/: demo_desk_workflow.py  generate_report.py  run_bloomberg_real.py
src/fxvol/: base.py
src/fxvol/core/: black_scholes.py  conventions.py  quotes.py
src/fxvol/exotics/: barrier_mc.py  tarf.py
src/fxvol/hedging/: backtest.py
src/fxvol/localvol/: dupire.py
src/fxvol/lsv/: leverage.py
src/fxvol/multifactor/: three_factor.py
src/fxvol/pnl/: book.py  engine.py
src/fxvol/risk/: grid.py
src/fxvol/stochvol/: calibration.py  heston.py
src/fxvol/surface/: smile.py  surface.py
src/fxvol/synthetic/: g10.py
src/fxvol/validation/: bloomberg.py
tests/: test_black_scholes.py  test_conventions.py  test_exotics.py  test_heston.py  test_multifactor.py  test_pnl.py  test_risk.py  test_surface.py  test_synthetic.py  test_validation.py
